# wima-mcp

./: .env.example  .gitignore  INSTALLATION.md  README.md  SYSTEM_FLOW.md  pyproject.toml  requirements.txt
scripts/: smoke_test.py  test_deliver_transaction.py  test_download_tools.py
src/wima_mcp/: __init__.py  __main__.py  config.py  db.py  server.py  storage.py
